update CartService and ItemService
存在2个问题:
1代码冗余问题,CartService复制了ItemDTO.
2如果多个Service都去调用ItemService,那么在这些Service中都去写ItemClient
也有冗余问题.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+logs
 *.log
 *.iml
 .idea/
@@ -6,3 +7,6 @@ target/
 # 禁止将数据库涉及密码的配置文件上传
 application-dev.*
 application-local.*
+
+# 禁止上传nacos的相关信息
+application-nacos.*
