--- a/hm-api/pom.xml
+++ b/hm-api/pom.xml
@@ -38,5 +38,11 @@
             <version>1.6.6</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- 参数校验       -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
