--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -1,5 +1,13 @@
 server:
   port: 8082
+  #tomcat的配置用于 微服务的线程隔离 测试
+  tomcat:
+    threads:
+      max: 25
+    max-connections: 100
+    accept-count: 50
+
+
 spring:
   application:
     name: cart-service
@@ -10,6 +18,10 @@ spring:
     nacos:
       discovery:
         server-addr: ${hm.nacos.server-addr}
+    sentinel:
+      transport:
+        dashboard: localhost:8090
+      http-method-specify: true
 
 hm:
   swagger:
